# serializer version: 1
# name: test_get_data
  list([
    dict({
      'time': '2020-06-05T03:02:01',
      'value': 1.23,
    }),
    dict({
      'time': '2020-06-05T03:02:01',
      'value': 1.23,
    }),
  ])
# ---
# name: test_get_data_site_code
  list([
    dict({
      'time': '2020-06-05T03:02:01',
      'value': 1.23,
    }),
    dict({
      'time': '2020-06-05T03:02:01',
      'value': 1.23,
    }),
  ])
# ---
# name: test_get_data_type
  list([
    dict({
      'time': '2020-06-05T03:02:01',
      'value': 1.23,
    }),
    dict({
      'time': '2020-06-05T03:02:01',
      'value': 1.23,
    }),
  ])
# ---
# name: test_get_outliers
  list([
    dict({
      'outliers': list([
        dict({
          'context_data': list([
            dict({
              'time': '2020-06-05T03:02:01',
              'value': 1.23,
            }),
            dict({
              'time': '2020-06-05T03:02:01',
              'value': 1.23,
            }),
          ]),
          'outlier_data': dict({
            'threshold': list([
              dict({
                'time': '2022-01-01T00:00:00',
                'value': 0.0,
              }),
              dict({
                'time': '2022-01-01T01:00:00',
                'value': 0.0,
              }),
              dict({
                'time': '2022-01-01T02:00:00',
                'value': 0.0,
              }),
              dict({
                'time': '2022-01-03T00:00:00',
                'value': 0.0,
              }),
              dict({
                'time': '2022-01-03T01:00:00',
                'value': 0.0,
              }),
              dict({
                'time': '2022-01-03T02:00:00',
                'value': 0.0,
              }),
              dict({
                'time': '2022-01-05T00:00:00',
                'value': 0.0,
              }),
              dict({
                'time': '2022-01-07T00:00:00',
                'value': 0.0,
              }),
            ]),
          }),
          'range': dict({
            'end': '2022-01-09T00:00:00',
            'start': '2021-12-31T00:00:00',
          }),
        }),
      ]),
      'site_code': 'CLDP0001',
    }),
    dict({
      'outliers': list([
        dict({
          'context_data': list([
            dict({
              'time': '2020-06-05T03:02:01',
              'value': 1.23,
            }),
            dict({
              'time': '2020-06-05T03:02:01',
              'value': 1.23,
            }),
          ]),
          'outlier_data': dict({
            'threshold': list([
              dict({
                'time': '2022-01-01T00:00:00',
                'value': 0.0,
              }),
              dict({
                'time': '2022-01-01T01:00:00',
                'value': 0.0,
              }),
              dict({
                'time': '2022-01-01T02:00:00',
                'value': 0.0,
              }),
              dict({
                'time': '2022-01-03T00:00:00',
                'value': 0.0,
              }),
              dict({
                'time': '2022-01-03T01:00:00',
                'value': 0.0,
              }),
              dict({
                'time': '2022-01-03T02:00:00',
                'value': 0.0,
              }),
              dict({
                'time': '2022-01-05T00:00:00',
                'value': 0.0,
              }),
              dict({
                'time': '2022-01-07T00:00:00',
                'value': 0.0,
              }),
            ]),
          }),
          'range': dict({
            'end': '2022-01-09T00:00:00',
            'start': '2021-12-31T00:00:00',
          }),
        }),
      ]),
      'site_code': 'CLDP0002',
    }),
  ])
# ---
# name: test_get_site_average
  list([
    dict({
      'site_code': 'CLDP0001',
      'site_details': None,
      'value': 1.23,
    }),
    dict({
      'site_code': 'CLDP0002',
      'site_details': None,
      'value': 4.56,
    }),
  ])
# ---
# name: test_get_site_average_enriched
  list([
    dict({
      'site_code': 'CLDP0001',
      'site_details': dict({
        'borough': 'Lambeth',
        'description': 'The Royal London Hospital is home to one of the largest...',
        'end_date': '2022-06-05T03:02:01',
        'is_enabled': True,
        'latitude': 51.518775939941406,
        'longitude': -0.059463899582624435,
        'name': 'Royal London University Hospital',
        'photo_url': 'https://api.breathelondon.org/assets/images/CLDP0001.jpg',
        'site_code': 'CLDP0001',
        'site_id': 1,
        'site_type': 'urban_background',
        'source': 'breathe_london',
        'start_date': '2020-06-05T03:02:01',
        'status': 'healthy',
      }),
      'value': 1.23,
    }),
    dict({
      'site_code': 'CLDP0002',
      'site_details': dict({
        'borough': 'Lambeth',
        'description': 'Brixton Central',
        'end_date': None,
        'is_enabled': True,
        'latitude': 50.0,
        'longitude': -0.01,
        'name': 'Brixton',
        'photo_url': 'https://api.breathelondon.org/assets/images/CLDP0002.jpg',
        'site_code': 'CLDP0002',
        'site_id': 2,
        'site_type': 'roadside',
        'source': 'breathe_london',
        'start_date': '2022-06-05T03:02:01',
        'status': 'healthy',
      }),
      'value': 4.56,
    }),
  ])
# ---
# name: test_get_site_average_enriched.1
  list([
    dict({
      'site_code': 'CLDP0001',
      'site_details': None,
      'value': 1.23,
    }),
    dict({
      'site_code': 'CLDP0002',
      'site_details': None,
      'value': 4.56,
    }),
  ])
# ---
# name: test_get_sites
  list([
    dict({
      'borough': 'Lambeth',
      'description': 'The Royal London Hospital is home to one of the largest...',
      'end_date': '2022-06-05T03:02:01',
      'is_enabled': True,
      'latitude': 51.518775939941406,
      'longitude': -0.059463899582624435,
      'name': 'Royal London University Hospital',
      'photo_url': 'https://api.breathelondon.org/assets/images/CLDP0001.jpg',
      'site_code': 'CLDP0001',
      'site_id': 1,
      'site_type': 'urban_background',
      'source': 'breathe_london',
      'start_date': '2020-06-05T03:02:01',
      'status': 'healthy',
    }),
    dict({
      'borough': 'Lambeth',
      'description': 'Brixton Central',
      'end_date': None,
      'is_enabled': True,
      'latitude': 50.0,
      'longitude': -0.01,
      'name': 'Brixton',
      'photo_url': 'https://api.breathelondon.org/assets/images/CLDP0002.jpg',
      'site_code': 'CLDP0002',
      'site_id': 2,
      'site_type': 'roadside',
      'source': 'breathe_london',
      'start_date': '2022-06-05T03:02:01',
      'status': 'healthy',
    }),
    dict({
      'borough': 'Lambeth',
      'description': 'Stockwell primary',
      'end_date': None,
      'is_enabled': False,
      'latitude': 50.1,
      'longitude': -0.02,
      'name': 'Stockwell',
      'photo_url': 'https://api.breathelondon.org/assets/images/CLDP0003.jpg',
      'site_code': 'CLDP0003',
      'site_id': 3,
      'site_type': 'roadside',
      'source': 'breathe_london',
      'start_date': '2022-06-05T03:02:01',
      'status': 'coming_online',
    }),
  ])
# ---
